Added loading animation and cleaned up some of the UI